--- a/SwiftConcurrencyTest-MVP/View/Base.lproj/Main.storyboard
+++ b/SwiftConcurrencyTest-MVP/View/Base.lproj/Main.storyboard
@@ -8,35 +8,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main Tab Bar Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SwiftConcurrencyTest_MVP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainTabBarController" customModule="SwiftConcurrencyTest_MVP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Koy-ps-90g">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="d1F-Aa-laA"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="1p3-h6-FM3"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Koy-ps-90g" secondAttribute="bottom" id="1y9-l3-bbM"/>
-                            <constraint firstItem="Koy-ps-90g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="KfN-8O-ACo"/>
-                            <constraint firstItem="Koy-ps-90g" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hzU-7g-7rd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Koy-ps-90g" secondAttribute="trailing" id="x7L-Rl-R76"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="tableView" destination="Koy-ps-90g" id="Acb-TM-JPe"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
