--- a/SwiftConcurrencyTest-MVP/View/ArticleList/ArticleCell.xib
+++ b/SwiftConcurrencyTest-MVP/View/ArticleList/ArticleCell.xib
@@ -3,51 +3,140 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="74" id="KGk-i7-Jjw" customClass="ArticleCell" customModule="SwiftConcurrencyTest_MVP" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="148" id="KGk-i7-Jjw" customClass="ArticleCell" customModule="SwiftConcurrencyTest_MVP" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="413" height="148"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+                <rect key="frame" x="0.0" y="0.0" width="413" height="148"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqQ-h9-Pz7">
-                        <rect key="frame" x="16" y="16" width="288" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVc-Qm-KjA">
-                        <rect key="frame" x="16" y="36" width="288" height="22"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SaO-Fs-87H">
+                        <rect key="frame" x="16" y="8" width="381" height="132"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zAP-FP-7XJ">
+                                <rect key="frame" x="16" y="16" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="4mc-fw-uGE"/>
+                                    <constraint firstAttribute="height" constant="40" id="uZR-RE-IzS"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqQ-h9-Pz7">
+                                <rect key="frame" x="64" y="16" width="273" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVc-Qm-KjA">
+                                <rect key="frame" x="64" y="45.5" width="273" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="0wk-vy-hfd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kod-oZ-JWD">
+                                <rect key="frame" x="337" y="46" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Zdx-Lc-gs9"/>
+                                    <constraint firstAttribute="width" constant="40" id="c9c-qE-WGY"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="">
+                                    <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
+                                </buttonConfiguration>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LGTM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Oc-Y3-7Ml">
+                                <rect key="frame" x="66" y="88.5" width="33.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="vYr-Ca-Hum">
+                                <rect key="frame" x="103.5" y="75.5" width="233.5" height="40.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0ER-B6-gF8">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="22" id="0wk-vy-hfd"/>
+                            <constraint firstItem="tVc-Qm-KjA" firstAttribute="leading" secondItem="zAP-FP-7XJ" secondAttribute="trailing" constant="8" id="6MO-mv-d8M"/>
+                            <constraint firstItem="tVc-Qm-KjA" firstAttribute="trailing" secondItem="kod-oZ-JWD" secondAttribute="leading" id="8W9-vV-niy"/>
+                            <constraint firstItem="fqQ-h9-Pz7" firstAttribute="leading" secondItem="zAP-FP-7XJ" secondAttribute="trailing" constant="8" id="J8R-6S-gK6"/>
+                            <constraint firstItem="kod-oZ-JWD" firstAttribute="centerY" secondItem="SaO-Fs-87H" secondAttribute="centerY" id="PHW-oE-okr"/>
+                            <constraint firstItem="kod-oZ-JWD" firstAttribute="leading" secondItem="vYr-Ca-Hum" secondAttribute="trailing" id="U6i-JA-6v5"/>
+                            <constraint firstItem="kod-oZ-JWD" firstAttribute="leading" secondItem="fqQ-h9-Pz7" secondAttribute="trailing" id="c4m-vS-esc"/>
+                            <constraint firstAttribute="bottom" secondItem="vYr-Ca-Hum" secondAttribute="bottom" constant="16" id="env-fD-cmZ"/>
+                            <constraint firstAttribute="trailing" secondItem="kod-oZ-JWD" secondAttribute="trailing" constant="4" id="fOg-UK-ELb"/>
+                            <constraint firstItem="7Oc-Y3-7Ml" firstAttribute="leading" secondItem="zAP-FP-7XJ" secondAttribute="trailing" constant="10" id="gDd-JL-vIU"/>
+                            <constraint firstItem="fqQ-h9-Pz7" firstAttribute="top" secondItem="SaO-Fs-87H" secondAttribute="top" constant="16" id="jvk-bt-lfg"/>
+                            <constraint firstItem="vYr-Ca-Hum" firstAttribute="top" secondItem="tVc-Qm-KjA" secondAttribute="bottom" constant="8" id="oae-bu-ry6"/>
+                            <constraint firstItem="vYr-Ca-Hum" firstAttribute="leading" secondItem="7Oc-Y3-7Ml" secondAttribute="trailing" constant="4" id="p8x-dY-Kj8"/>
+                            <constraint firstItem="tVc-Qm-KjA" firstAttribute="top" secondItem="fqQ-h9-Pz7" secondAttribute="bottom" constant="8" id="qfE-Jn-C3a"/>
+                            <constraint firstItem="zAP-FP-7XJ" firstAttribute="top" secondItem="SaO-Fs-87H" secondAttribute="top" constant="16" id="rZ6-bq-NXL"/>
+                            <constraint firstItem="7Oc-Y3-7Ml" firstAttribute="centerY" secondItem="vYr-Ca-Hum" secondAttribute="centerY" id="sHc-6C-Tjl"/>
+                            <constraint firstItem="zAP-FP-7XJ" firstAttribute="leading" secondItem="SaO-Fs-87H" secondAttribute="leading" constant="16" id="vde-HH-TeK"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <size key="value" width="0.0" height="1"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="tVc-Qm-KjA" secondAttribute="bottom" constant="16" id="3eP-En-Jmf"/>
-                    <constraint firstItem="tVc-Qm-KjA" firstAttribute="top" secondItem="fqQ-h9-Pz7" secondAttribute="bottom" constant="4" id="Pu7-MB-ahS"/>
-                    <constraint firstItem="fqQ-h9-Pz7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="RyO-0E-7FB"/>
-                    <constraint firstAttribute="trailing" secondItem="tVc-Qm-KjA" secondAttribute="trailing" constant="16" id="UVA-8p-DJl"/>
-                    <constraint firstItem="fqQ-h9-Pz7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Vdk-Ag-lHg"/>
-                    <constraint firstAttribute="trailing" secondItem="fqQ-h9-Pz7" secondAttribute="trailing" constant="16" id="YnD-gU-SPW"/>
-                    <constraint firstItem="tVc-Qm-KjA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="goR-oN-kzR"/>
+                    <constraint firstItem="SaO-Fs-87H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="DiD-7W-2iB"/>
+                    <constraint firstAttribute="bottom" secondItem="SaO-Fs-87H" secondAttribute="bottom" constant="8" id="lks-zv-qXr"/>
+                    <constraint firstAttribute="trailing" secondItem="SaO-Fs-87H" secondAttribute="trailing" constant="16" id="u09-Mb-mhY"/>
+                    <constraint firstItem="SaO-Fs-87H" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="u10-8I-sKl"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="baseView" destination="SaO-Fs-87H" id="5Zm-t3-BOd"/>
+                <outlet property="favoriteButton" destination="kod-oZ-JWD" id="utb-Sb-atM"/>
                 <outlet property="titleLabel" destination="fqQ-h9-Pz7" id="zyE-Ea-rma"/>
+                <outlet property="userIconImageView" destination="zAP-FP-7XJ" id="3VX-9w-ZeG"/>
                 <outlet property="userNameLabel" destination="tVc-Qm-KjA" id="MN3-QT-x4X"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="101.78571428571428"/>
+            <point key="canvasLocation" x="184.78260869565219" y="126.5625"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
