--- a/SwiftConcurrencyTest-MVP/View/ArticleList/LgtmUserIconCell.xib
+++ b/SwiftConcurrencyTest-MVP/View/ArticleList/LgtmUserIconCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="LgtmUserListCell" customModule="SwiftConcurrencyTest_MVP" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="LgtmUserIconCell" customModule="SwiftConcurrencyTest_MVP" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="179" height="175"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
